@@ -28,6 +28,8 @@ BUGFIXES:
 
   ZOOKEEPER-333. helgrind thread issues identified in mt c client code
   (mahadev via phunt)
+
+  ZOOKEEPER-309. core dump using zoo_get_acl() (mahadev via phunt)
  
 IMPROVEMENTS:
   ZOOKEEPER-308. improve the atomic broadcast performance 3x.
